--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,12 @@
                 <div class="container">
                     <div class="header__inner">
                         <nav class="header__nav">
-                            <ul>
+                            <div class="header__btn">
+                                <div class="raw"></div>
+                                <div class="raw"></div>
+                                <div class="raw"></div>
+                            </div>
+                            <ul class="menu__list">
                                 <li><a href="#">Home</a></li>
                                 <li><a href="#">Specials</a></li>
                                 <li><a href="#">About</a></li>
@@ -28,11 +33,15 @@
                                 <li><a href="#">Contact</a></li>
                             </ul>
                         </nav>
+                    </div>
+                    <div class="header__content">
                         <div class="header__title title">
                             Veggies es bonus vobis,
                             proinde vos postulo essum.
                         </div>
                     </div>
+
+
                 </div>
 
             </header>
